--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.3.3"
+    "mongoose": "^7.3.3",
+    "nodemon": "^3.0.1"
   },
   "engines": {
     "node": ">=16.x"
